<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/coffee_variation_name"
        android:inputType="text"
        android:paddingStart="20dp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/coffee_variation_desc"
        android:inputType="text"
        android:paddingStart="20dp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextCaffeineContent"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/caffeine_content"
        android:inputType="numberDecimal"
        android:paddingStart="20dp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextCalories"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/calories"
        android:inputType="number"
        android:paddingStart="20dp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextFatContent"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/fat_content"
        android:inputType="numberDecimal"
        android:paddingStart="20dp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextSugar"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/sugar"
        android:inputType="numberDecimal"
        android:paddingStart="20dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:text="@string/add_button" />

</LinearLayout>
